2009-10-28 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: fix RangeSet.intersection, RangeSet.difference (wrong
	parameter issue).

	* Task.py: fix called method when using worker.iter_node_retcodes();
	fix called method when using worker.node_rc().

	* Improved tests code coverage, also resulting in some fixes (see
	above).

2009-08-08 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 6 released.

	* Engine: fix fanout definition and set it as the max number of
	concurrent running engine clients (EngineClient), and not FDs (trac
	ticket #33).

2009-08-03 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 5 released.

2009-07-31 S. Thiell <stephane.thiell@cea.fr>

	* clush.py: (1) remove /step in displayed nodeset when using -b (to
	allow copy/paste to other tools like ipmipower that doesn't support
	N-M/STEP ranges), (2) when command timeout is specified (-u), show
	nodes (on stderr) that didn't have time to fully complete, (3) flush
	stdio buffers before exiting.

	* Version 1.1 RC 4 released.

2009-07-29 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: fixed a problem with intersection_update() when used
	with two simple nodes (no rangeset) [merged from trunk].

	* nodeset.py: fixed -i and -X options issue (trac ticket #29).

2009-07-28 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 3 released.

2009-07-23 S. Thiell <stephane.thiell@cea.fr>

	* clush.py: fix another command_timeout (-u) issue, now the command_timeout
	value is passed as the timeout value at worker level.

	* Version 1.1 branched.

2009-07-22 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 2 released.

	* clush.py: change -u timeout behavior, if set it's now the timeout value
	passed to task.shell() (and not connect_timeout + command_timeout).

	* clush.py: add -o options to pass custom ssh options (#24).

	* Worker/Ssh.py: simple quote escape fix (trac ticket #25).

	* Worker/Popen2.py: simple quote escape fix (trac ticket #25)
