@@ -7,7 +7,10 @@
 """Unit test for ClusterShell Task (local)"""
 
 import copy
+import os
+import signal
 import sys
+import time
 import unittest
 
 sys.path.insert(0, '../lib')
@@ -16,10 +19,12 @@ import ClusterShell
 
 from ClusterShell.NodeSet import NodeSet
 from ClusterShell.Task import *
+from ClusterShell.Worker.Worker import WorkerSimple
 
 import socket
 
 import thread
+import threading
 
 
 def _test_print_debug(task, s):
@@ -171,6 +176,8 @@ class TaskLocalTest(unittest.TestCase):
         except TimeoutError:
             self.fail("did detect timeout")
 
+        self.assert_(worker.did_timeout())
+
     def testWorkersTimeout2(self):
         """test workers with timeout (more)"""
         task = task_self()
@@ -320,22 +327,27 @@ class TaskLocalTest(unittest.TestCase):
         self.assert_(task != None)
 
         # first test that simply changing print_debug doesn't enable debug
-        task.set_info("print_debug", _test_print_debug)
-        task.shell("/bin/true")
-        task.resume()
-        self.assertEqual(task.info("user_print_debug_last"), None)
+        default_print_debug = task.info("print_debug")
+        try:
+            task.set_info("print_debug", _test_print_debug)
+            task.shell("/bin/true")
+            task.resume()
+            self.assertEqual(task.info("user_print_debug_last"), None)
 
-        # with debug enabled, it should work
-        task.set_info("debug", True)
-        task.shell("/bin/true")
-        task.resume()
-        self.assertEqual(task.info("user_print_debug_last"), "POPEN2: [/bin/sh,-c,/bin/true]")
+            # with debug enabled, it should work
+            task.set_info("debug", True)
+            task.shell("/bin/true")
+            task.resume()
+            self.assertEqual(task.info("user_print_debug_last"), "POPEN2: [/bin/sh,-c,/bin/true]")
 
-        # remove debug
-        task.set_info("debug", False)
-        # re-run for default print debug callback code coverage
-        task.shell("/bin/true")
-        task.resume()
+            # remove debug
+            task.set_info("debug", False)
+            # re-run for default print debug callback code coverage
+            task.shell("/bin/true")
+            task.resume()
+        finally:
+            # restore default print_debug
+            task.set_info("print_debug", default_print_debug)
 
     def testLocalRCBufferGathering(self):
         """test task local rc+buffers gathering"""
@@ -473,6 +485,82 @@ class TaskLocalTest(unittest.TestCase):
         task.resume()
         self.assertEqual(worker1.read(), "ok")
         self.assertEqual(worker2.read(), None)
+
+    def testTaskPrintDebug(self):
+        """test task default print_debug"""
+        task = task_self()
+        self.assert_(task != None)
+        # simple test, just run a task with debug on to improve test
+        # code coverage
+        task.set_info("debug", True)
+        worker = task.shell("/bin/echo test")
+        self.assert_(worker != None)
+        task.resume()
+        task.set_info("debug", False)
+
+    def testTaskAbort(self):
+        """test task abort"""
+        from ClusterShell.Engine.Engine import EngineAbortException
+        # warning: abort() method not fully supported in 1.1,
+        # use with care and subject to change
+        # test abort() outside handler
+        task = task_self()
+        self.assert_(task != None)
+        worker = task.shell("/bin/echo shouldnt see that")
+        self.assertRaises(EngineAbortException, task.abort)
+
+    def testTaskScheduleError(self):
+        """test task worker schedule error"""
+        from ClusterShell.Worker.Worker import WorkerError
+        task = task_self()
+        self.assert_(task != None)
+        worker = task.shell("/bin/echo itsme")
+        self.assertRaises(WorkerError, task.schedule, worker)
+        try:
+            task.abort()
+        except:
+            pass
+
+    def testWorkerSetKey(self):
+        """test worker set_key()"""
+        task = task_self()
+        self.assert_(task != None)
+        task.shell("/bin/echo foo", key="foo")
+        worker = task.shell("/bin/echo foobar")
+        worker.set_key("bar")
+        task.resume()
+        self.assert_(task.key_buffer("bar") == "foobar")
+
+    def testWorkerSimple(self):
+        """test WorkerSimple"""
+        task = task_self()
+        self.assert_(task != None)
+
+        file_reader = sys.stdin
+        worker = WorkerSimple(file_reader, None, None, "simple", None, 0, True)
+        self.assert_(worker != None)
+
+        task.schedule(worker)
+        task.resume()
+
+    def testInterruptEngine(self):
+        """test Engine signal interruption"""
+        class KillerThread(threading.Thread):
+            def run(self):
+                time.sleep(1)
+                os.kill(self.pidkill, signal.SIGUSR1)
+                task_wait()
+
+        kth = KillerThread()
+        kth.pidkill = os.getpid()
+
+        task = task_self()
+        self.assert_(task != None)
+        signal.signal(signal.SIGUSR1, lambda x, y: None)
+        task.shell("/bin/sleep 2", timeout=5)
+
+        kth.start()
+        task.resume()
 
 
 if __name__ == '__main__':
